<resources>
    <string name="app_name">Tummy</string>
    <string name="app_name_tagline">fill it in with magic</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">loading...</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nationality">Nationality</string>
    <string name="dob">Date of Birth</string>
    <string name="confirm">Confirm</string>
    <string name="pwd_not_matching">Passwords are not matching</string>
    <string name="mandatory_fields">All fields are mandatory</string>
    <string name="server_busy">Server is busy, please try again.</string>
    <string name="successful_signup">Welcome to tummy.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_recipe">Recipes</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_friends_circle">Friends Circle</string>
    <string name="title_account">Account</string>
    <string name="unauthorizeduser">Unauthorized user or user not found</string>
    <string name="preference_name">com.wanderingThinkter.tummy.prefs2019</string>
    <string name="jwt_token">jwttoken</string>
    <string name="no_recipes">No recipes to show</string>
    <string name="refresh_label">Refreshing feeds.</string>
    <string name="filters_text">Filters</string>
    <string name="cuisine_text">Cuisine</string>
    <string name="ingredients_txt">Ingredients</string>
    <string name="add_ingredients">Add more ingredients</string>
</resources>
