<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_recipes"
            android:icon="@drawable/ic_action_name"
            android:title="@string/title_recipe"/>

    <item android:title="@string/title_friends_circle" android:id="@+id/navigation_friends"
          android:icon="@drawable/friends"/>
    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"/>
    <item android:title="@string/title_account" android:id="@+id/navigation_account" android:icon="@drawable/account"/>

</menu>
