<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpTxt" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" app:fontFamily="@font/almendra"
            android:textColor="@color/colorPrimary" android:textStyle="bold" android:textSize="24sp"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailtxt"
            app:layout_constraintTop_toBottomOf="@+id/signUpTxt" android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" app:fontFamily="@font/almendra"
            android:textColor="@color/colorPrimaryDark" android:textStyle="bold" android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailInput"
            android:fontFamily="@font/almendra"
            app:layout_constraintStart_toStartOf="@+id/emailtxt"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailtxt" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp"
            android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            app:layout_constraintStart_toStartOf="@+id/emailtxt"
            android:textColor="@color/colorPrimaryDark" android:textStyle="bold" app:fontFamily="@font/almendra"
            android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pwdInput" android:layout_marginTop="8dp"
            android:fontFamily="@font/almendra"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/emailtxt" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp"
            android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/emailtxt"
            app:layout_constraintTop_toBottomOf="@+id/pwdInput" android:layout_marginTop="8dp"
            android:textSize="18sp" android:textColor="@color/colorPrimaryDark" android:textStyle="bold"
            app:fontFamily="@font/almendra"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pwdConfirmInput"
            android:fontFamily="@font/almendra"
            app:layout_constraintStart_toStartOf="@+id/emailtxt"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp"
            android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pwdConfirmInput"
            app:layout_constraintStart_toStartOf="@+id/emailtxt"
            android:textColor="@color/colorPrimaryDark" android:textStyle="bold" android:textSize="18sp"
            app:fontFamily="@font/almendra"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/firstNameInput"
            android:fontFamily="@font/almendra"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/emailtxt"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="20dp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/firstNameInput"
            app:layout_constraintStart_toStartOf="@+id/emailtxt"
            android:layout_marginTop="8dp" app:fontFamily="@font/almendra" android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark" android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:fontFamily="@font/almendra"
            android:id="@+id/lastNameInput" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp"
            app:layout_constraintStart_toStartOf="@+id/emailtxt"/>
    <TextView
            android:text="@string/nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="@+id/emailtxt"
            app:layout_constraintTop_toBottomOf="@+id/lastNameInput" android:layout_marginTop="8dp"
            android:textSize="18sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
            app:fontFamily="@font/almendra"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nationalityInput"
            android:fontFamily="@font/almendra"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/emailtxt"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/nationalityInput"
            app:layout_constraintStart_toStartOf="@+id/emailtxt"
            android:layout_marginTop="8dp" android:textColor="@color/colorPrimaryDark" android:textStyle="bold"
            android:textSize="18sp" app:fontFamily="@font/almendra"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dobInput"
            android:focusable="false"
            android:fontFamily="@font/almendra"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="@+id/emailtxt"
            android:layout_marginTop="8dp" android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="20dp"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/confirmBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            android:textSize="18sp" android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:text="@string/confirm" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dobInput"/>
</androidx.constraintlayout.widget.ConstraintLayout>