<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp" app:srcCompat="@mipmap/ic_launcher_foreground"
            android:id="@+id/logo"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/app_name"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appName" android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="@+id/logo" android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" android:textSize="45sp"
            app:layout_constraintStart_toEndOf="@+id/logo" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:fontFamily="@font/akronim"/>
    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginTxt"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" android:textStyle="bold"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/appName" android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            app:fontFamily="@font/almendra"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/loginEmail"
            app:layout_constraintStart_toStartOf="@+id/loginTxt"
            android:fontFamily="@font/almendra"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/loginTxt"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="20dp" android:hint="@string/email" android:textColor="@android:color/black"
            android:textSize="18sp" android:autoLink="email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loginEmail"
            app:layout_constraintStart_toStartOf="@+id/loginEmail"
            android:fontFamily="@font/almendra"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="20dp" android:hint="@string/password" android:textSize="18sp"
            android:textColor="@android:color/black"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp" android:layout_marginRight="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:fontFamily="@font/almendra"
            android:layout_marginStart="20dp" android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white" android:textSize="18sp"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" android:layout_marginTop="50dp"
            android:textSize="18sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
            app:fontFamily="@font/almendra"/>
</androidx.constraintlayout.widget.ConstraintLayout>