<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".RecipeFinderFragment"
                                                   android:id="@+id/frameLayout2">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="141dp"
            tools:layout_editor_absoluteX="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent"
        >
            <TextView
                    android:text="@string/filters_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textColor="@android:color/black" android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                    android:layout_marginTop="10dp" app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/cusineTxt"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp" android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                    android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:textSize="14sp"
                    android:hint="@string/cuisine_text"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" app:layout_constraintTop_toBottomOf="@+id/cusineTxt"
                    android:paddingLeft="20sp" android:paddingRight="20sp"
                    android:id="@+id/ingredientsLayout">
                <EditText
                        android:layout_width="372dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/ingredients1"
                        android:textColor="@android:color/black"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:textSize="14sp" app:layout_constraintEnd_toEndOf="parent"
                        tools:layout_editor_absoluteY="10dp" android:hint="@string/ingredients_txt"/>
            </LinearLayout>
            <Button
                    android:text="@string/confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/button3"
                    android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/ingredientsLayout"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="20dp" android:layout_marginStart="20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/addIngredients" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent" app:backgroundTint="@color/colorPrimary"
            app:maxImageSize="30dp"/>
    <TextView
            android:text="@string/add_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toStartOf="@+id/addIngredients"
            android:layout_marginEnd="15dp" android:layout_marginRight="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/addIngredients"
            app:layout_constraintTop_toTopOf="@+id/addIngredients"/>
</androidx.constraintlayout.widget.ConstraintLayout>